--- a/assets/css/style-ar.css
+++ b/assets/css/style-ar.css
@@ -78,6 +78,15 @@ body {
     left: -184px;
 }
 
+.services-two__btn {
+    flex-direction: row-reverse;
+    align-items: center;
+    gap: 10px;
+}
+.services-two__btn span {
+    transform: rotate(180deg);
+}
+
 .thm-btn {
     display: flex;
     justify-content: flex-start;
