--- a/assets/css/style-ar.css
+++ b/assets/css/style-ar.css
@@ -11,7 +11,8 @@ body {
 .footer-widget-two__contact-location,
 .footer-widget__emergency-call a,
 .footer-widget__contact-location,
-.mobile-nav__contact li a {
+.mobile-nav__contact li a,
+.main-header-two__contact-list li .text p {
     direction: ltr;
 }
 
